--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,9 +254,11 @@ nav .input-group-text {
     border-radius: 8px;
     padding: 0;
     overflow: hidden;
-    padding: 0;
+    transition: all 0.3s;
 }
-
+.home_boxes .jk-banner-item-warpper1:hover{
+    transform: scale(1.05);
+}
 .home_boxes .jk_bnr_prd_img1 img {
     height: 200px;
     width: 100%;
