--- a/assets/css/shilpra-play-house.css
+++ b/assets/css/shilpra-play-house.css
@@ -38,10 +38,8 @@ a {
 /* header section start */
 header {
     font-family: "Inter", sans-serif;
-     box-shadow: 0 0 20px 1px rgba(0,0,0,.4);
-
+    box-shadow: 0 0 20px 1px rgba(0,0,0,.4);
 }
-
 /* 
 header .flieo {
     max-width: 65px !important;
@@ -58,6 +56,7 @@ header .flieo {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     position: relative;
 }
+
 header .header-content p span {
     color: #9E1000;
     font-size: 16px;
@@ -188,116 +187,101 @@ nav .input-group-text {
 }
 
 /* navbar section end */
-
 /* banner top start */
-
-
-.jk-banner-area {
-    background-color: #eaeaea;
-    position: relative;
-    z-index: 1;
-    padding: 15px 0;
-
+.banner a {
+    color: #000;
 }
 
-.jk-banner-item-content {
-    padding: 10px 15px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-
-}
-
-.jk-banner-item-content h2 {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 20px;
-    margin-bottom: 5px;
-}
-
-.jk-banner-item-content h2 a {
-    color: #2f333a;
-}
-
-.jk-banner-item-content h2 a:hover {
+.banner a:hover {
     color: #9e1000;
 }
 
-
-
-.jk-banner-item-content .jk-price {
-    color: #2f333a;
-    font-size: 18px;
-    font-weight: 600;
-    word-wrap: break-word;
-    margin-bottom: 5px;
+.breadcord {
+    color: #6c757d;
 }
 
-
-.clr2 {
-    color: #111;
-    font-weight: 500;
-    font-size: 12px;
-
+.clr4 {
+    color: #0f0f10;
 }
 
-.jk-banner-item-content .jk-list-info ul {
-    list-style: none;
-    padding: 0;
-}
-
-.jk-banner-item-content .jk-list-info ul li {
-    font-size: 14px;
-    margin-bottom: 5px;
-    list-style: none;
-    color: #4f4f4f;
-    font-weight: 400;
-    line-height: 21px;
-}
-
-.fw6 {
-    font-weight: 600;
-}
-
-
-.home_boxes .jk-banner-item-warpper1 {
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 0;
-    overflow: hidden;
-    transition: all 0.3s;
-}
-
-.home_boxes .jk-banner-item-warpper1:hover {
-    transform: scale(1.05);
-}
-
-.home_boxes .jk_bnr_prd_img1 img {
-    height: 200px;
-    width: 100%;
-    transition: all 0.5s;
-}
-
-.home_boxes .jk_bnr_prd_img1:hover img {
-    transform: scale(0.9);
+.fw-bold1 {
+    font-weight: 800 !important;
 }
 
 /* banner top end */
-
 /* product start */
-
-.category-title a {
-    color: #2f333a;
-    font-size: 33px;
-    font-weight: 700;
-    margin-bottom: 0;
+.product {
+    background-color: #f0f0f0;
 }
 
-.category-title a:hover {
+.product .product1 {
+    background-color: #fff;
+    border-radius: 5px;
+    width: 100%;
+    transition: all 0.3s;
+    padding: 10px;
+}
+
+.product .product1:hover {
+    transform: scale(1.02);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, .4);
+}
+
+.product .product1 img {
+    border: 1px solid #ededed;
+}
+
+.product .product1 .kids {
+    color: #0f0f10;
+    margin-top: 10px;
+}
+
+.product .product1 .kids:hover {
+    color: #9E1000;
+}
+.product .product1 .view{
     color: #9e1000;
+    font-size: 15px;
+    font-weight: bold;
+    transition: all 0.3s;
+    display: block;
+    margin-top: 20px;
 }
-
+.product .product1 .view:hover{
+    text-decoration: underline !important;
+}
+.product .product1 p{
+    margin-bottom: 5px;
+}
 /* product end */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* contact start */
 .contact {
