--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,11 @@
 a {
     text-decoration: none !important;
 }
-
+.view{
+    color: #9E1000;
+    font-weight: 500 ;
+    text-decoration: underline !important;
+}
 .button {
     padding: 7px 20px;
     font-size: 25px;
@@ -172,63 +176,58 @@ header .nav-button {
     z-index: 1;
     padding: 15px 0;
 }
-
-.jk-banner-item-content {
-    padding: 15px 20px;
-   border-top: 1px solid rgb(224, 224, 224);
-}
-
-.jk-banner-item-content h2 {
-    font-size: 18px;
-    font-weight: 700;
-    line-height:27px;
-    margin-bottom: 5px;
-}
-
-.jk-banner-item-content h2 a {
-    color: #2f333a;
-}
-
-.jk-banner-item-content h2 a:hover {
-    color: #9e1000;
-}
-
-.home_boxes .jk-banner-item-warpper1 {
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 0;
-    overflow: hidden;
-    transition: all 0.3s;
-}
-
-.home_boxes .jk-banner-item-warpper1:hover {
-    transform: scale(1.05);
-}
-
-.home_boxes .jk_bnr_prd_img1 img {
-    max-height: 280px;
-    width: 100%;
-    transition: all 0.5s;
-}
-
-/* .home_boxes .jk_bnr_prd_img1:hover img {
-    transform: scale(0.9);
-} */
-
-/* banner top end */
-
-/* product start */
-.category-title{
+.jk-banner-area .category-title{
     color: #DB5202;
       font-size: 33px;
     font-weight: 700;
     margin: 30px 0px;
   text-shadow: 1px 1px 1px #63f745;
 }
+.jk-banner-area .jk-banner-item-warpper1 {
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 0;
+    overflow: hidden;
+    transition: all 0.3s;
+    border: 1px solid #d9d2d2;
+    width: 100%;
+}
+
+.jk-banner-area .jk-banner-item-warpper1:hover {
+    transform: scale(1.05);
+}
+.jk-banner-area .jk-banner-item-warpper1:hover .jk-banner-item-content h2 a{
+    color: #9E1000;
+}
+.jk-banner-area .jk_bnr_prd_img1 img {
+    max-height: 260px;
+    min-height: 200px;
+    width: 100%;
+    transition: all 0.5s;
+}
+.jk-banner-area .jk-banner-item-content {
+    padding: 15px 20px;
+   border-top: 1px solid rgb(224, 224, 224);
+}
+
+.jk-banner-area .jk-banner-item-content h2 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height:27px;
+    margin-bottom: 5px;
+}
+
+.jk-banner-area .jk-banner-item-content h2 a {
+    color: #2f333a;
+}
+
+.jk-banner-area .jk-banner-item-content h2 a:hover {
+    color: #9e1000;
+}
+
 
 /* product end */
-
-/* contact start */
+/* footer start */
 .contact {
     padding: 20px 0;
     background: #2f333a;
