--- a/assets/css/educational.css
+++ b/assets/css/educational.css
@@ -139,18 +139,45 @@ header .nav-button {
 
 /* header section end */
 
+
 /* Educational start */
-.Educational .box{
-    border-radius: 9px; 
+.Educational .col-lg-6 #mainDisplay{
+    border: 2px solid #db5202;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px gray;
+    max-height: 450px;
+    min-height: 450px;
+    width: 100%;
 }
-table {
+.Educational .col-lg-6 .thumb-img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 1px solid rgb(109, 108, 108);
+    transition: all 0.1s;
+    margin-right: 20px;
+}
+.Educational .col-lg-6 .thumb-img:last-child{
+    margin-right: 0px;
+}
+.Educational .col-lg-6 .thumb-img.active {
+    border:2px solid red;
+}
+
+.Educational .box {
+    border-radius: 9px;
+}
+
+.Educational table {
     caption-side: bottom;
     border-collapse: collapse;
 }
 
-tbody,
-tr,
-td {
+.Educational tbody,
+.Educational tr,
+.Educational td {
     border-color: inherit;
     border-style: solid;
     border-width: 0;
@@ -238,6 +265,10 @@ td {
         margin: 4px 0;
         width: 304px;
     }
+    .Educational .col-lg-6 #mainDisplay{
+    min-height: 350px;
+    width: 100%;
+}
 }
 
 /* max-width:768px */
