--- a/assets/css/about_us.css
+++ b/assets/css/about_us.css
@@ -299,7 +299,9 @@ header .nav-button {
     text-align: center;
     margin-right: 10px;
 }
-
+.contact a{
+    color: #ffffff;
+}
 .contact .contact-socialMediaIcon a {
     color: white;
 }
@@ -310,12 +312,6 @@ header .nav-button {
 
 .contact .contact-socialMediaIcon:hover a {
     color: #9e1000;
-}
-
-.contact .contact-form {
-    border-radius: 6px;
-    background: #fff;
-    padding: 32px 40px;
 }
 
 /* footer end */
