--- a/assets/css/musical_toy.css
+++ b/assets/css/musical_toy.css
@@ -290,7 +290,9 @@ color: #000000;
     text-align: center;
     margin-right: 10px;
 }
-
+.contact a{
+    color: #ffffff;
+}
 .contact .contact-socialMediaIcon a {
     color: white;
 }
@@ -301,12 +303,6 @@ color: #000000;
 
 .contact .contact-socialMediaIcon:hover a {
     color: #9e1000;
-}
-
-.contact .contact-form {
-    border-radius: 6px;
-    background: #fff;
-    padding: 32px 40px;
 }
 
 /* footer end */
