--- a/assets/css/puzzle.css
+++ b/assets/css/puzzle.css
@@ -271,7 +271,9 @@ header .nav-button {
     color: #fff;
     font-weight: 400;
 }
-
+.contact a{
+    color: #ffffff;
+}
 .contact .contact-socialMediaIcon {
     display: inline-block;
     width: 35px;
@@ -293,12 +295,6 @@ header .nav-button {
 
 .contact .contact-socialMediaIcon:hover a {
     color: #9e1000;
-}
-
-.contact .contact-form {
-    border-radius: 6px;
-    background: #fff;
-    padding: 32px 40px;
 }
 
 /* footer end */
