--- a/assets/css/shilpra-play-house.css
+++ b/assets/css/shilpra-play-house.css
@@ -256,33 +256,6 @@ nav .input-group-text {
 /* product end */
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* contact start */
 .contact {
     padding: 20px 0;
@@ -306,7 +279,9 @@ nav .input-group-text {
     color: #fff;
     font-weight: 400;
 }
-
+.contact a{
+    color: #ffffff;
+}
 .contact .contact-socialMediaIcon {
     display: inline-block;
     width: 35px;
@@ -328,12 +303,6 @@ nav .input-group-text {
 
 .contact .contact-socialMediaIcon:hover a {
     color: #9e1000;
-}
-
-.contact .contact-form {
-    border-radius: 6px;
-    background: #fff;
-    padding: 32px 40px;
 }
 
 /* contact end */
