--- a/assets/css/sports_toy.css
+++ b/assets/css/sports_toy.css
@@ -279,7 +279,9 @@ color: #000000;
     color: #fff;
     font-weight: 400;
 }
-
+.contact a{
+    color: #ffffff;
+}
 .contact .contact-socialMediaIcon {
     display: inline-block;
     width: 35px;
@@ -302,13 +304,6 @@ color: #000000;
 .contact .contact-socialMediaIcon:hover a {
     color: #9e1000;
 }
-
-.contact .contact-form {
-    border-radius: 6px;
-    background: #fff;
-    padding: 32px 40px;
-}
-
 /* footer end */
 /* responsive */
 /* max-width:992px */
