--- a/assets/css/birthday_gifts.css
+++ b/assets/css/birthday_gifts.css
@@ -245,9 +245,17 @@ header .nav-button {
 /* footer start */
 .contact {
     padding: 20px 0;
-    background: #2f333a;
+    /* background: #2f333a; */
+    background-color: #00142B;
 }
-
+.contact a{
+    transition: all 0.3s;
+}
+.contact a:hover{
+    color: #ff6f00;
+    letter-spacing: 0.7px;
+    font-weight: 550;
+}
 .contact h2 {
     color: #fff;
     font-size: 26px;
@@ -256,7 +264,8 @@ header .nav-button {
 }
 
 .contact .contact-logo {
-    color: #9e1000;
+    color: #ff6f00;
+    /* color: #9e1000; */
     font-size: 22px;
 }
 
@@ -265,7 +274,13 @@ header .nav-button {
     color: #fff;
     font-weight: 400;
 }
+.contact ul li {
+    line-height:30px;
+}
 
+.contact #contact-social-media .d-flex{
+    padding: 15px 0px;
+}
 .contact .contact-socialMediaIcon {
     display: inline-block;
     width: 35px;
