--- a/assets/css/toys-games.css
+++ b/assets/css/toys-games.css
@@ -60,7 +60,40 @@ header .input-group {
     margin: 7px 0;
     width: 404px;
 }
+/* Search product list */
+#productList {
+    position: absolute;
+    top:55px;
+    /* right: 20px; */
+   min-width: 300px;
+    /* border: 1px solid gainsboro; */
+    border-radius: 8px;
+    box-shadow: 0px 1px 2px gray;
+    z-index: 999;
+    background-color: white;
+    max-height: 400px;
+    overflow-y: auto;
+}
 
+#productList .product-item {
+    padding: 10px 15px;
+    border-bottom: 1px solid #ccc;
+    transition: all 0.2s;
+}
+
+#productList  .product-item:hover {
+    /* background-color: rgb(211, 243, 253); */
+    background-color: #0C781E;
+    color: rgb(255, 255, 255);
+}
+#productList  .product-item a{
+    color: black;
+}
+
+#productList  .product-item:hover a{
+    color: rgb(255, 255, 255);
+}
+/* Search product list */
 header .form-control {
     height: 42px;
     background-color: #F0F2F5;
@@ -236,18 +269,20 @@ header .nav-button {
 }
 
 #product .col-md-8 .card .card-img-top {
-   height: 220px;
+    height: 220px;
     border-bottom: 1px solid rgb(187, 186, 186);
     border-radius: 10px 10px 0px 0px;
 }
 
 #product .col-md-8 .card .card-title {
     font-weight: 700;
-    font-size: 18px ;
+    font-size: 18px;
 }
-#product .col-md-8 .card .card-text{
+
+#product .col-md-8 .card .card-text {
     font-size: 15px;
 }
+
 #product .col-md-8 .card .btn {
     background-color: #0D8120;
     width: 100%;
@@ -257,9 +292,11 @@ header .nav-button {
     box-shadow: rgb(79, 79, 79) 1px 1px 5px 0px;
     margin-top: 20px;
 }
-#product .col-md-8 .card .btn:hover{
+
+#product .col-md-8 .card .btn:hover {
     box-shadow: 1px 1px 5px gray;
 }
+
 /* Product section end */
 
 /* footer start */
@@ -268,14 +305,17 @@ header .nav-button {
     /* background: #2f333a; */
     background-color: #00142B;
 }
-.contact a{
+
+.contact a {
     transition: all 0.3s;
 }
-.contact a:hover{
+
+.contact a:hover {
     color: #ff6f00;
     letter-spacing: 0.7px;
     font-weight: 550;
 }
+
 .contact h2 {
     color: #fff;
     font-size: 26px;
@@ -294,13 +334,15 @@ header .nav-button {
     color: #fff;
     font-weight: 400;
 }
+
 .contact ul li {
-    line-height:30px;
+    line-height: 30px;
 }
 
-.contact #contact-social-media .d-flex{
+.contact #contact-social-media .d-flex {
     padding: 15px 0px;
 }
+
 .contact .contact-socialMediaIcon {
     display: inline-block;
     width: 35px;
@@ -315,9 +357,11 @@ header .nav-button {
 .contact .contact-socialMediaIcon a {
     color: white;
 }
-.contact a{
+
+.contact a {
     color: #ffffff;
 }
+
 .contact .contact-socialMediaIcon:hover {
     background-color: white;
 }
